# LLMApps

./: README.md
ask_astrology/: main.py  pyproject.toml
ask_astrology/agents/: AgentState.py  Research.py  Search.py  astrologer.py
ask_astrology/graph/: Graph.py
graphDB/: .env  kg-simple.ipynb  pyproject.toml
graphDB/.ipynb_checkpoints/: kg-simple-checkpoint.ipynb
imageSummary/: ImageProcesing.py  main.py  pyproject.toml
langGraphApps/: langGraph_basic.ipynb  pyproject.toml
langchain_mistral/: .gitignore  RAG_Vastu.ipynb  RAG_WebScrapper.ipynb  RAG_With_Wiki.ipynb  RAG_iphone16.ipynb  RAG_with_chain.ipynb  README.md  connect-llm-mistral.ipynb  data_loader.ipynb  env_example  llm_chain_prompt_parser.ipynb  pyproject.toml
multimodel/: imageSummary.ipynb  pyproject.toml
news/: Graph.py  LLM.py  main.py  news.py  pyproject.toml
news/Nodes/: NewsAPIParameterGeneration.py  ResultFormatter.py  RetrieveArticlesMetadata.py  RetrieveArticlesText.py  SelectTopUrls.py  Summarize_Articles.py
pythonbasic/: app.yaml  main.py  pyproject.toml
reflection-agent/: pyproject.toml  reflection.ipynb
reflexion-agent/: pyproject.toml  reflexion.ipynb
talk_to_image/: app.yaml  main.py  pyproject.toml  requirements.txt
talk_to_image/agents/: AgentState.py  ImageProcessing.py  Research.py  Search.py
talk_to_image/graph/: Graph.py
