[tool.poetry]
name = "langgraphapps"
version = "0.1.0"
description = ""
authors = ["Pramod Modi <pramodkmodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.45"
langchain-mistralai = "^0.2.1"
mistralai = "^1.2.1"
langchain-community = "^0.3.5"
langchain-chroma = "^0.1.4"
torch = "2.2.2"
sentence-transformers = "^3.3.0"
langchain-huggingface = "^0.1.2"
ipykernel = "^6.29.5"
tavily-python = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
