[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = ["Pramod Modi <pramodkmodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-mistralai = "^0.2.1"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
langgraph = "^0.2.50"
mistralai = "^1.2.2"
langchain-google-genai = "^2.0.4"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
