[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Pramod Modi <pramodkmodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langgraph = "^0.2.52"
langchain-gemini = "^0.1.1"
langchain-openai = "^0.2.9"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
ipykernel = "^6.29.5"
langchain-google-genai = "^2.0.4"
langchain-community = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
